@@ -1,5 +1,0 @@
-$NetBSD: distinfo,v 1.4 2021/10/26 11:17:38 nia Exp $
-
-BLAKE2s (PolicyKit-gnome-0.9.2.tar.bz2) = f2dcc27718873fbfa7874bab33525da78e502da332b568a525923181fe38847a
-SHA512 (PolicyKit-gnome-0.9.2.tar.bz2) = a5ad523bca9dc26c5c6de79cd6f8bc6c3ce91e5b0377e146271f457276fe31b3964a6e144b757d4f6a3bf3aeda83dd47a0a2581f8931e51c192484b9ab2a938f
-Size (PolicyKit-gnome-0.9.2.tar.bz2) = 1223691 bytes
